--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@angular/common": "^17.1.0",
     "@angular/compiler": "^17.1.0",
     "@angular/core": "^17.1.0",
-    "@angular/forms": "^17.1.0",
+    "@angular/forms": "^17.3.9",
+    "@angular/material": "^17.3.9",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/router": "^17.1.0",
+    "@angular/router": "^17.3.9",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
